--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -18,7 +18,6 @@ h1 .status { color: #444; text-transform: lowercase; }
 #ticket .date p { margin: 0 }
 
 #ticket table.properties {
- border-bottom: 1px solid #dd9;
  border-top: 1px solid #dd9;
  border-collapse: collapse;
  table-layout: fixed;
@@ -39,10 +38,20 @@ h1 .status { color: #444; text-transform: lowercase; }
 #ticket table.properties td { width: 30% }
 #ticket table.properties .description { border-top: 1px solid #dd9 }
 
-#ticket .description form { 
+
+#ticket .description h3 {
+ border-bottom: 1px solid #dd9;
+ color: #663;
+ font-size: 100%;
+ font-weight: normal;
+}
+#ticket .description h3 .lastmod {
+ font-size: 90%;
+}
+#ticket .inlinebuttons { 
  float: right;
  position: relative;
- bottom: 1.8em;
+ bottom: 0.3em;
 }
 
 #changelog { border: 1px outset #996; padding: 1em }
@@ -52,13 +61,10 @@ h1 .status { color: #444; text-transform: lowercase; }
  font-size: 100%;
  font-weight: normal;
 }
-#changelog .threading {
+#changelog .threading, #changelog .inlinebuttons {
  float: right;
  position: relative;
  bottom: 0.3em;
-}
-#changelog h3 .threading form { 
- display: inline
 }
 
 #changelog .changes { list-style: square; margin-left: 2em; padding: 0 }
