--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -445,6 +445,6 @@ div.system-message p.system-message-title { font-weight: bold; }
 
 @media print {
  #header, #altlinks, #footer, #help { display: none }
- .nav, form, .buttons form, form .buttons { display: none }
+ .nav, form, .buttons form, form .buttons, form .inlinebuttons { display: none }
  form.printableform { display: block }
 }
