Respect whitespace present in `{{{...}}}` or {{{`...`}}} inline verbatim text.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3742 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -19,6 +19,7 @@ h3 { font-size: 14px }
 hr { border: none;  border-top: 1px solid #ccb; margin: 2em 0 }
 address { font-style: normal }
 img { border: none }
+tt { white-space: pre }
 
 .underline { text-decoration: underline }
 ol.loweralpha { list-style-type: lower-alpha }
