Mark currently selected navigation items as "active"  (regression introduced by Genshi merge). Closes #3848.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3840 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
   <div py:def="navigation(category)" id="${category}" class="nav">
     <ul py:if="chrome.nav[category]">
       <li py:for="idx, item in  enumerate(chrome.nav[category])"
-          class="${first_last(idx, chrome.nav[category])}">${item.label}</li>
+          class="${item.active and 'active ' or ''}${first_last(idx, chrome.nav[category])}">${item.label}</li>
     </ul>
   </div>
 
