--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -5,8 +5,8 @@
   xmlns:py="http://genshi.edgewall.org/"
   xmlns:xi="http://www.w3.org/2001/XInclude">
 
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
-  <xi:include href="macros.html"><xi:fallback/></xi:include>
+  <xi:include href="layout.html" />
+  <xi:include href="macros.html" />
 
   <head>
     <title>#${ticket.id} (${ticket.summary})</title>
@@ -192,6 +192,7 @@ ${comment}</textarea></p>
                     py:attrs="{'colspan': fullrow and 3 or None}">
                     <py:choose test="field.type" py:if="field">
                       <select py:when="'select'" id="${field.name}" name="${field.name}">
+                        <option py:if="field.optional"></option>
                         <option py:for="option in field.options"
                           selected="${ticket[field.name] == option or None}"
                           py:content="option"></option>
