Don't use `<xi:fallback>` in templates for mandatory includes.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3849 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -2,10 +2,10 @@
     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:py="http://genshi.edgewall.org/"
-  xmlns:xi="http://www.w3.org/2001/XInclude">
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
-  <xi:include href="macros.html"><xi:fallback/></xi:include>
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="layout.html" />
+  <xi:include href="macros.html" />
   <head>
     <title>Attachment</title>
   </head>
