--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
-  <xi:include href="site.html"><xi:fallback/></xi:include>
+  <xi:include href="site.html"><xi:fallback /></xi:include>
 
   <head py:match="head">
     <title>${select('title/text()')} – Trac</title>
