--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
+  <xi:include href="layout.html" />
   <head>
     <title>Roadmap</title>
     <link rel="stylesheet" type="text/css"
