--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,18 @@
     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:py="http://genshi.edgewall.org/"
-  xmlns:xi="http://www.w3.org/2001/XInclude">
-
-  <head><title>Available Projects</title></head>
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
+  <head>
+    <title>Available Projects</title>
+  </head>
 
   <body>
     <h1>Available Projects</h1>
     <ul>
       <li py:for="project in projects" py:choose="">
-        <a py:when="project.href" href="$project.href" title="$project.description">$project.name</a>
+        <a py:when="project.href" href="$project.href"
+           title="$project.description">$project.name</a>
         <py:otherwise>
           <small>$project.name: <em>Error</em> <br /> ($project.description)</small>
         </py:otherwise>
