--- a/templates/query_div.html
+++ b/templates/query_div.html
@@ -13,9 +13,10 @@
        query     - the actual Query instance used to perform the query
 
 -->
-<div xmlns="http://www.w3.org/1999/xhtml" xmlns:py="http://genshi.edgewall.org/"
+<div xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:py="http://genshi.edgewall.org/"
      xmlns:xi="http://www.w3.org/2001/XInclude">
-  <xi:include href="macros.html"><xi:fallback/></xi:include>
+  <xi:include href="macros.html" />
 
   <py:def function="num_matches(v)">
     <span class="numrows">(${v or 'No'} match${v != 1 and 'es' or ''})</span>
