--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
-  <xi:include href="layout.html"><xi:fallback/></xi:include>
+  <xi:include href="layout.html" />
   <head>
     <title>Search<py:if test="query"> Results</py:if></title>
     <script type="text/javascript">
