Fix a couple of places where the Wiki toolbar was not correctly embedded.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3852 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/milestone_edit.html
+++ b/templates/milestone_edit.html
@@ -90,7 +90,7 @@ ${milestone.description_source}</textarea></p>
           <input py:otherwise="" type="submit" value="Add milestone" />
           <input type="submit" name="cancel" value="Cancel" />
         </div>
-        <script type="text/javascript" src="${chromehtdocs_location}js/wikitoolbar.js"></script>
+        <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
       </form>
 
     </div>
