--- a/templates/wiki_edit.html
+++ b/templates/wiki_edit.html
@@ -111,7 +111,7 @@ $page.text
           </py:otherwise>
           <input type="submit" name="cancel" value="Cancel" />
         </div>
-        <script type="text/javascript" src="${htdocs_location}js/wikitoolbar.js"></script>
+        <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
       </form>
     </div>
   </body>
