--- a/templates/report_edit.html
+++ b/templates/report_edit.html
@@ -28,6 +28,6 @@ $report.sql</textarea>
         <input type="submit" name="cancel" value="Cancel"/>
       </div>
     </div>
-    <script type="text/javascript" src="${htdocs_location}js/wikitoolbar.js"></script>
+    <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
   </form>
 </div>
