Defend against non-populated chrome info in template.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3865 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,11 @@
   <head py:match="head">
     <title>${select('title/text()')} – Trac</title>
     <meta py:if="norobots" name="ROBOTS" content="NOINDEX, NOFOLLOW" />
-    <div py:for="rel, links in chrome.links.items()" py:strip="">
-      <link rel="${rel}" py:for="link in links" py:attrs="link"/>
-    </div>
+    <py:if test="chrome.links">
+      <py:for each="rel, links in chrome.links.items()">
+        <link rel="${rel}" py:for="link in links" py:attrs="link" />
+      </py:for>
+    </py:if>
     <script py:for="script in chrome.scripts"
             type="${script.type}" src="${script.href}"></script>
     ${select('*[not(title)]')}
