Include project name in page titles. Closes #3864.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3866 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,9 @@
   <xi:include href="site.html"><xi:fallback /></xi:include>
 
   <head py:match="head">
-    <title>${select('title/text()')} – Trac</title>
+    <title py:with="title = unicode(select('title/text()'))">
+      ${' – '.join(filter(None, [title, project.name, 'Trac']))}
+    </title>
     <meta py:if="norobots" name="ROBOTS" content="NOINDEX, NOFOLLOW" />
     <py:if test="chrome.links">
       <py:for each="rel, links in chrome.links.items()">
