Generalized the macro for prev/up/next links in the ctxtnav.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3868 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -15,7 +15,7 @@
       <h2>Navigation</h2>
       <ul py:choose="">
         <py:when test="changeset">
-          ${changeset_navigation(changeset and restricted and 'Change' or 'Changeset')}
+          ${prevnext_nav(changeset and restricted and 'Change' or 'Changeset')}
         </py:when>
         <py:otherwise>
           <li class="last">
