--- a/templates/wiki_edit.html
+++ b/templates/wiki_edit.html
@@ -62,8 +62,7 @@
             </select>
           </div>
           <p><textarea id="text" class="wikitext" name="text" cols="80" rows="$edit_rows">
-$page.text
-            </textarea>
+$page.text</textarea>
           </p>
           <script type="text/javascript">
             var scrollBarPos = document.getElementById("scroll_bar_pos");
