Improved internal error reporting:
Internal errors are eith indicative of a problem with the Trac installation or a bug in Trac itself.
In both cases, the Trac admnistrator must be the first informed, as he's the most adequate person to either fix the installation issue or to relay the bug report to the TracTeam.

This is why upon internal errors, "normal" users will now be told to contact their local Trac administrator.
A new `[project]` setting, ''admin'', can be used to define a mail contact. If this contact information is not defined, a button for creating a ticket on the local Trac will added instead of the mailto: link.

When someone with the TRAC_ADMIN permission hits an internal error, however, he will have the full stacktrace information as before, plus some system information obtained from the new `self.env.systeminfo` dictionary.
In addition, he will be advised to ''search'' on Trac's Trac for a similar issue, and will have the possibility to create a ticket directly on t.e.o, with all the information we usually ask for.

The ''Create'' button will only prepare a new ticket (''preview'' mode). That way, the description can be further edited and other ticket fields can be set before submitting.


''This change could eventually be backported to [milestone:0.10.1]''




git-svn-id: http://svn.edgewall.org/repos/trac/trunk@3883 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -435,6 +435,10 @@ table.listing tbody tr:hover { background: #eed !important }
 div.system-message p { margin: 0; }
 div.system-message p.system-message-title { font-weight: bold; }
 
+#content.error #systeminfo th { font-weight: bold; text-align: right; }
+#content.error #newticket form { display: inline; }
+#content.error #newticket textarea { display: none; }
+
 /* Styles for search word highlighting */
 @media screen {
  .searchword0 { background: #ff9 }
